2015-01-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la classe ProductionDatabase ed iniziata l'implementazione di alcune funzioni.

2015-01-13 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la classe Production, modello per la gestione delle produzioni.

2015-01-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Corretta la visualizzazione delle attivita' e dei collaboratori con scelte multiple.

    * Rilasciata versione 0.1.2

2015-01-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Rilasciata versione 0.1.1

2015-01-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Corretta il salvataggio dell'utente corretto nelle attivita'.

2015-01-05 Marco Giammarini <m.giammarini@warcomeb.it>

    * Rilasciata versione 0.1.0

2014-12-17 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il dialog per la gestione di piu' file di configurazione. WiP!

2014-12-15 Marco Giammarini <m.giammarini@warcomeb.it>

    * Implementata la lettura dei dati del database dal file ini.

2014-12-08 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiungere il cambio dei nomi dei pulsanti in base a come si apre ogni dialog.

    * Aggiungere il parsing del comando $ nella ricerca dei dipendenti.

2014-12-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata l'implementazione per effettuare la ricerca nelle attivita'.

    * Alcuni fix generici sia nelle classi Activity che in quelle Employee.

2014-12-06 Marco Giammarini <m.giammarini@warcomeb.it>

    * Cambiata la funzione setOwners di ActivityNoteDialog.

    * Implementata la parte grafica della ricerca nelle attivita'.

2014-12-05 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il pulsante 'Add Note' nell'activity dialog e la relativa gestione.

2014-12-04 Marco Giammarini <m.giammarini@warcomeb.it>

    * Sistemata la gestione dell'aggiornamento del dialog activity sulla base delle informazioni ricevute. Ora e' tutto incapsulato.
